--- a/src/app/pages/ingresos-detallados/ingresos-detallados.component.html
+++ b/src/app/pages/ingresos-detallados/ingresos-detallados.component.html
@@ -14,7 +14,7 @@
                 <!-- tipoOperacion -->
                 <dxi-column dataField="tipoOperacion" caption="Operación"></dxi-column>
                 <!-- enero -->
-                <dxi-column dataField="enero" caption="ENERO" headerCellTemplate="headerTemplate">
+                <dxi-column dataField="enero" caption="ENERO DESPACHADO" headerCellTemplate="headerTemplate">
                     <dxo-format type="currency" [precision]="2"> </dxo-format>
                 </dxi-column>
                 <!-- febMASolicitudCancelacion -->
@@ -45,7 +45,7 @@
                 </dxi-column>
                 <!-- febIngreso -->
                 <dxi-column caption="MOVIMIENTOS FEBRERO" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
-                    <dxi-column dataField="febIngreso" caption="Ingresos" alignment="right" headerCellTemplate="headerTemplate">
+                    <dxi-column dataField="febIngreso" caption="Facturado" alignment="right" headerCellTemplate="headerTemplate">
                         <dxo-format type="currency" [precision]="2"> </dxo-format>
                     </dxi-column>
 
@@ -213,7 +213,7 @@
                 <!-- tipoOperacion -->
                 <dxi-column dataField="tipoOperacion" caption="Operación"></dxi-column>
                 <!-- enero -->
-                <dxi-column dataField="enero" caption="MES ANTERIOR" headerCellTemplate="headerTemplate">
+                <dxi-column dataField="enero" caption="MES ANTERIOR DESPACHADO" headerCellTemplate="headerTemplate">
                     <dxo-format type="currency" [precision]="2"> </dxo-format>
                 </dxi-column>
                 <!-- febMASolicitudCancelacion -->
@@ -243,8 +243,8 @@
                     <dxo-format type="currency" [precision]="2"> </dxo-format>
                 </dxi-column>
                 <!-- febIngreso -->
-                <dxi-column caption="MOVIMIENTOS FEBRERO" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
-                    <dxi-column dataField="febIngreso" caption="Ingresos" alignment="right" headerCellTemplate="headerTemplate">
+                <dxi-column caption="MOVIMIENTOS MARZO" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
+                    <dxi-column dataField="febIngreso" caption="Facturado" alignment="right" headerCellTemplate="headerTemplate">
                         <dxo-format type="currency" [precision]="2"> </dxo-format>
                     </dxi-column>
 
