--- a/src/app/pages/ingresos-detallados/ingresos-detallados.component.html
+++ b/src/app/pages/ingresos-detallados/ingresos-detallados.component.html
@@ -17,6 +17,10 @@
                 <dxi-column dataField="enero" caption="ENERO DESPACHADO" headerCellTemplate="headerTemplate">
                     <dxo-format type="currency" [precision]="2"> </dxo-format>
                 </dxi-column>
+                <!-- febIgresosOtrosMeses -->
+                <dxi-column dataField="febIgresosOtrosMeses" caption="Otros Meses" headerCellTemplate="headerTemplate">
+                    <dxo-format type="currency" [precision]="2"> </dxo-format>
+                </dxi-column>
                 <!-- febMASolicitudCancelacion -->
                 <dxi-column caption="MOVIMIENTOS DE VIAJES DEL MES ANTERIOR" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
                     <dxi-column dataField="febMASolicitudCancelacion" caption="Pendientes Cancelacion" headerCellTemplate="headerTemplate">
@@ -38,11 +42,12 @@
                     <dxi-column dataField="febMANuevo" caption="Nuevas" headerCellTemplate="headerTemplate">
                         <dxo-format type="currency" [precision]="2"> </dxo-format>
                     </dxi-column>
+                    <!-- febMATotal -->
+                    <dxi-column dataField="febMATotal" caption="TOTAL" headerCellTemplate="headerTemplate" cellTemplate="cellTemplateBold">
+                        <dxo-format type="currency" [precision]="2"> </dxo-format>
+                    </dxi-column>
                 </dxi-column>
-                <!-- febIgresosOtrosMeses -->
-                <dxi-column dataField="febIgresosOtrosMeses" caption="Otros Meses" headerCellTemplate="headerTemplate">
-                    <dxo-format type="currency" [precision]="2"> </dxo-format>
-                </dxi-column>
+
                 <!-- febIngreso -->
                 <dxi-column caption="MOVIMIENTOS FEBRERO" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
                     <dxi-column dataField="febIngreso" caption="Facturado" alignment="right" headerCellTemplate="headerTemplate">
@@ -53,15 +58,12 @@
                     <dxi-column dataField="febProvision" caption="Provisión" alignment="right" headerCellTemplate="headerTemplate">
                         <dxo-format type="currency" [precision]="2"> </dxo-format>
                     </dxi-column>
-                    <!-- febProvision -->
-                    <dxi-column dataField="febDespachado" caption="Despachado" alignment="right" headerCellTemplate="headerTemplate">
-                        <dxo-format type="currency" [precision]="2"> </dxo-format>
-                    </dxi-column>
+
 
                 </dxi-column>
 
-                <!-- febrero -->
-                <dxi-column dataField="febrero" caption="TOTAL" alignment="right" headerCellTemplate="headerTemplate">
+                <!-- despachado -->
+                <dxi-column dataField="febDespachado" caption="TOTAL" alignment="right" headerCellTemplate="headerTemplate" cellTemplate="cellTemplateBold">
                     <dxo-format type="currency" [precision]="2"> </dxo-format>
                 </dxi-column>
 
@@ -110,10 +112,14 @@
                     </dxi-group-item>
                     <dxi-total-item column="febDespachado" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
                     </dxi-total-item>
+                    <dxi-group-item column="febMATotal" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
+                    </dxi-group-item>
+                    <dxi-total-item column="febMATotal" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}" *dxTemplate="headerTemplate">
+                    </dxi-total-item>
                 </dxo-summary>
 
                 <div *dxTemplate="let data of 'headerTemplate'">
-                    <div style="font-weight: bolder; color: black">
+                    <div style="font-weight:bolder; color: black">
                         {{ data.column.caption }}
                     </div>
                 </div>
@@ -126,7 +132,7 @@
 
                 <!-- TEMPLATE: CELDA EN NEGRITA -->
                 <div *dxTemplate="let cell of 'cellTemplateBold'">
-                    <div style="font-weight: bold">{{ cell.text }}</div>
+                    <div style="font-weight: bolder; font-size:medium;">{{ cell.text }}</div>
                 </div>
 
 
@@ -213,7 +219,11 @@
                 <!-- tipoOperacion -->
                 <dxi-column dataField="tipoOperacion" caption="Operación"></dxi-column>
                 <!-- enero -->
-                <dxi-column dataField="enero" caption="MES ANTERIOR DESPACHADO" headerCellTemplate="headerTemplate">
+                <dxi-column dataField="enero" caption="MES ANT. DESPACHADO" headerCellTemplate="headerTemplate">
+                    <dxo-format type="currency" [precision]="2"> </dxo-format>
+                </dxi-column>
+                <!-- IgresosOtrosMeses -->
+                <dxi-column dataField="febIgresosOtrosMeses" caption="Otros Meses" headerCellTemplate="headerTemplate">
                     <dxo-format type="currency" [precision]="2"> </dxo-format>
                 </dxi-column>
                 <!-- febMASolicitudCancelacion -->
@@ -238,10 +248,7 @@
                         <dxo-format type="currency" [precision]="2"> </dxo-format>
                     </dxi-column>
                 </dxi-column>
-                <!-- febIgresosOtrosMeses -->
-                <dxi-column dataField="febIgresosOtrosMeses" caption="Otros Meses" headerCellTemplate="headerTemplate">
-                    <dxo-format type="currency" [precision]="2"> </dxo-format>
-                </dxi-column>
+
                 <!-- febIngreso -->
                 <dxi-column caption="MOVIMIENTOS MARZO" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
                     <dxi-column dataField="febIngreso" caption="Facturado" alignment="right" headerCellTemplate="headerTemplate">
