--- a/src/app/pages/ingresos-detallados/ingresos-detallados.component.html
+++ b/src/app/pages/ingresos-detallados/ingresos-detallados.component.html
@@ -6,7 +6,7 @@
     <dx-tab-panel>
         <dxi-item title="Febrero 2022">
             <!--#region :::: GRID PRINCIPAL::::  -->
-            <dx-data-grid #IngresosGrid id="gridContainer" [dataSource]="arrIngresos" [columnAutoWidth]="true" [showColumnLines]="true" [showBorders]="true" [rowAlternationEnabled]="true">
+            <dx-data-grid #IngresosGrid id="gridContainer" [dataSource]="arrIngresos" [columnAutoWidth]="true" [showColumnLines]="true" [showBorders]="true" [rowAlternationEnabled]="true" (onRowPrepared)="onRowPrepared($event)">
 
                 <dxo-export [enabled]="true"></dxo-export>
                 <!-- unidadNegocio -->
@@ -23,9 +23,7 @@
                 </dxi-column>
                 <!-- febMASolicitudCancelacion -->
                 <dxi-column caption="MOVIMIENTOS DE VIAJES DEL MES ANTERIOR" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
-                    <dxi-column dataField="febMASolicitudCancelacion" caption="Pendientes Cancelacion" headerCellTemplate="headerTemplate">
-                        <dxo-format type="currency" [precision]="2"> </dxo-format>
-                    </dxi-column>
+
                     <!-- febMACancelacion -->
                     <dxi-column dataField="febMACancelacion" caption="Cancelado" headerCellTemplate="headerTemplate">
                         <dxo-format type="currency" [precision]="2"> </dxo-format>
@@ -43,7 +41,7 @@
                         <dxo-format type="currency" [precision]="2"> </dxo-format>
                     </dxi-column>
                     <!-- febMATotal -->
-                    <dxi-column dataField="febMATotal" caption="TOTAL" headerCellTemplate="headerTemplate" cellTemplate="cellTemplateBold">
+                    <dxi-column dataField="febMATotal" caption="TOTAL" headerCellTemplate="headerTemplate">
                         <dxo-format type="currency" [precision]="2"> </dxo-format>
                     </dxi-column>
                 </dxi-column>
@@ -63,7 +61,7 @@
                 </dxi-column>
 
                 <!-- despachado -->
-                <dxi-column dataField="febDespachado" caption="TOTAL" alignment="right" headerCellTemplate="headerTemplate" cellTemplate="cellTemplateBold">
+                <dxi-column dataField="febDespachado" caption="TOTAL" alignment="right" headerCellTemplate="headerTemplate">
                     <dxo-format type="currency" [precision]="2"> </dxo-format>
                 </dxi-column>
 
@@ -104,18 +102,16 @@
                     </dxi-group-item>
                     <dxi-total-item column="febMACancelacion" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
                     </dxi-total-item>
-                    <dxi-group-item column="febMASolicitudCancelacion" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
-                    </dxi-group-item>
-                    <dxi-total-item column="febMASolicitudCancelacion" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
-                    </dxi-total-item>
                     <dxi-group-item column="febDespachado" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
                     </dxi-group-item>
                     <dxi-total-item column="febDespachado" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
                     </dxi-total-item>
+
                     <dxi-group-item column="febMATotal" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
                     </dxi-group-item>
-                    <dxi-total-item column="febMATotal" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}" *dxTemplate="headerTemplate">
+                    <dxi-total-item column="febMATotal" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
                     </dxi-total-item>
+
                 </dxo-summary>
 
                 <div *dxTemplate="let data of 'headerTemplate'">
@@ -209,9 +205,10 @@
             </dx-data-grid>
             <!--#endregion :::: FIN GRID PRINCIPAL ::::  -->
         </dxi-item>
+
         <dxi-item title="Marzo 2022">
             <!--#region :::: GRID PRINCIPAL::::  -->
-            <dx-data-grid #IngresosGrid id="gridContainer" [dataSource]="arrIngresosMarzo" [columnAutoWidth]="true" [showColumnLines]="true" [showBorders]="true" [rowAlternationEnabled]="true">
+            <dx-data-grid #IngresosGrid id="gridContainer" [dataSource]="arrIngresosMarzo" [columnAutoWidth]="true" [showColumnLines]="true" [showBorders]="true" [rowAlternationEnabled]="true" (onRowPrepared)="onRowPrepared($event)">
 
                 <dxo-export [enabled]="true"></dxo-export>
                 <!-- unidadNegocio -->
@@ -219,18 +216,16 @@
                 <!-- tipoOperacion -->
                 <dxi-column dataField="tipoOperacion" caption="Operación"></dxi-column>
                 <!-- enero -->
-                <dxi-column dataField="enero" caption="MES ANT. DESPACHADO" headerCellTemplate="headerTemplate">
+                <dxi-column dataField="enero" caption="FEBRERO DESPACHADO" headerCellTemplate="headerTemplate">
                     <dxo-format type="currency" [precision]="2"> </dxo-format>
                 </dxi-column>
-                <!-- IgresosOtrosMeses -->
+                <!-- febIgresosOtrosMeses -->
                 <dxi-column dataField="febIgresosOtrosMeses" caption="Otros Meses" headerCellTemplate="headerTemplate">
                     <dxo-format type="currency" [precision]="2"> </dxo-format>
                 </dxi-column>
                 <!-- febMASolicitudCancelacion -->
                 <dxi-column caption="MOVIMIENTOS DE VIAJES DEL MES ANTERIOR" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
-                    <dxi-column dataField="febMASolicitudCancelacion" caption="Pendientes Cancelacion" headerCellTemplate="headerTemplate">
-                        <dxo-format type="currency" [precision]="2"> </dxo-format>
-                    </dxi-column>
+
                     <!-- febMACancelacion -->
                     <dxi-column dataField="febMACancelacion" caption="Cancelado" headerCellTemplate="headerTemplate">
                         <dxo-format type="currency" [precision]="2"> </dxo-format>
@@ -247,10 +242,14 @@
                     <dxi-column dataField="febMANuevo" caption="Nuevas" headerCellTemplate="headerTemplate">
                         <dxo-format type="currency" [precision]="2"> </dxo-format>
                     </dxi-column>
+                    <!-- febMATotal -->
+                    <dxi-column dataField="febMATotal" caption="TOTAL" headerCellTemplate="headerTemplate">
+                        <dxo-format type="currency" [precision]="2"> </dxo-format>
+                    </dxi-column>
                 </dxi-column>
 
                 <!-- febIngreso -->
-                <dxi-column caption="MOVIMIENTOS MARZO" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
+                <dxi-column caption="MOVIMIENTOS FEBRERO" cellTemplate="headerTemplate" alignment="center" [allowSorting]="false">
                     <dxi-column dataField="febIngreso" caption="Facturado" alignment="right" headerCellTemplate="headerTemplate">
                         <dxo-format type="currency" [precision]="2"> </dxo-format>
                     </dxi-column>
@@ -259,15 +258,12 @@
                     <dxi-column dataField="febProvision" caption="Provisión" alignment="right" headerCellTemplate="headerTemplate">
                         <dxo-format type="currency" [precision]="2"> </dxo-format>
                     </dxi-column>
-                    <!-- febProvision -->
-                    <dxi-column dataField="febDespachado" caption="Despachado" alignment="right" headerCellTemplate="headerTemplate">
-                        <dxo-format type="currency" [precision]="2"> </dxo-format>
-                    </dxi-column>
+
 
                 </dxi-column>
 
-                <!-- febrero -->
-                <dxi-column dataField="febrero" caption="TOTAL" alignment="right" headerCellTemplate="headerTemplate">
+                <!-- despachado -->
+                <dxi-column dataField="febDespachado" caption="TOTAL" alignment="right" headerCellTemplate="headerTemplate">
                     <dxo-format type="currency" [precision]="2"> </dxo-format>
                 </dxi-column>
 
@@ -308,18 +304,20 @@
                     </dxi-group-item>
                     <dxi-total-item column="febMACancelacion" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
                     </dxi-total-item>
-                    <dxi-group-item column="febMASolicitudCancelacion" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
-                    </dxi-group-item>
-                    <dxi-total-item column="febMASolicitudCancelacion" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
-                    </dxi-total-item>
                     <dxi-group-item column="febDespachado" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
                     </dxi-group-item>
                     <dxi-total-item column="febDespachado" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
                     </dxi-total-item>
+
+                    <dxi-group-item column="febMATotal" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="true">
+                    </dxi-group-item>
+                    <dxi-total-item column="febMATotal" summaryType="sum" valueFormat="$ #,##0.##;-$ #,##0.##" displayFormat="{0}">
+                    </dxi-total-item>
+
                 </dxo-summary>
 
                 <div *dxTemplate="let data of 'headerTemplate'">
-                    <div style="font-weight: bolder; color: black">
+                    <div style="font-weight:bolder; color: black">
                         {{ data.column.caption }}
                     </div>
                 </div>
@@ -332,7 +330,7 @@
 
                 <!-- TEMPLATE: CELDA EN NEGRITA -->
                 <div *dxTemplate="let cell of 'cellTemplateBold'">
-                    <div style="font-weight: bold">{{ cell.text }}</div>
+                    <div style="font-weight: bolder; font-size:medium;">{{ cell.text }}</div>
                 </div>
 
 
@@ -407,6 +405,7 @@
 
                 <dxo-sorting mode="none"></dxo-sorting>
             </dx-data-grid>
+            <!--#endregion :::: FIN GRID PRINCIPAL ::::  -->
         </dxi-item>
     </dx-tab-panel>
 
